Bug 178853 - KDE Control Module (kcmshell4) crashed and caused the signal 11 (SIGSEGV).
Summary: KDE Control Module (kcmshell4) crashed and caused the signal 11 (SIGSEGV).
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kdm (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Other
: NOR crash
Target Milestone: ---
Assignee: kdm bugs tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-27 03:20 UTC by aantenor
Modified: 2009-03-26 04:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aantenor 2008-12-27 03:20:45 UTC
Version:            (using KDE 4.1.3)
OS:                Other
Installed from:    SuSE RPMs



Application: KDE Control Module (kcmshell4), signal SIGSEGV
[?1034h(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0x7fa8f6853700 (LWP 16032)]
[New Thread 0x40b72950 (LWP 16046)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#5  0x00007fa8f447c169 in QString::indexOf () from /usr/lib64/libQtCore.so.4
#6  0x00007fa8f447e871 in QString::split () from /usr/lib64/libQtCore.so.4
#7  0x00007fa8f447e997 in QString::section () from /usr/lib64/libQtCore.so.4
#8  0x00007fa8e8aab362 in ?? () from /usr/lib64/kde4/kcm_kdm.so
#9  0x00007fa8e8aae5f0 in ?? () from /usr/lib64/kde4/kcm_kdm.so
#10 0x00007fa8f4536284 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#11 0x00007fa8f2c20cd7 in QAbstractButton::clicked ()
   from /usr/lib64/libQtGui.so.4
#12 0x00007fa8f29a3f5b in ?? () from /usr/lib64/libQtGui.so.4
#13 0x00007fa8f29a5ae2 in ?? () from /usr/lib64/libQtGui.so.4
#14 0x00007fa8f29a5d35 in QAbstractButton::mouseReleaseEvent ()
   from /usr/lib64/libQtGui.so.4
#15 0x00007fa8f26eb999 in QWidget::event () from /usr/lib64/libQtGui.so.4
#16 0x00007fa8f269917d in QApplicationPrivate::notify_helper ()
   from /usr/lib64/libQtGui.so.4
#17 0x00007fa8f26a179a in QApplication::notify () from /usr/lib64/libQtGui.so.4
#18 0x00007fa8f59f6d9b in KApplication::notify () from /usr/lib64/libkdeui.so.5
#19 0x00007fa8f4521e81 in QCoreApplication::notifyInternal ()
   from /usr/lib64/libQtCore.so.4
#20 0x00007fa8f26a0b38 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib64/libQtGui.so.4
#21 0x00007fa8f2705259 in ?? () from /usr/lib64/libQtGui.so.4
#22 0x00007fa8f2703c77 in QApplication::x11ProcessEvent ()
   from /usr/lib64/libQtGui.so.4
#23 0x00007fa8f272a55c in ?? () from /usr/lib64/libQtGui.so.4
#24 0x00007fa8eee8c93a in g_main_context_dispatch ()
   from /usr/lib64/libglib-2.0.so.0
#25 0x00007fa8eee90040 in ?? () from /usr/lib64/libglib-2.0.so.0
#26 0x00007fa8eee901dc in g_main_context_iteration ()
   from /usr/lib64/libglib-2.0.so.0
#27 0x00007fa8f454a3af in QEventDispatcherGlib::processEvents ()
   from /usr/lib64/libQtCore.so.4
#28 0x00007fa8f2729ccf in ?? () from /usr/lib64/libQtGui.so.4
#29 0x00007fa8f4520782 in QEventLoop::processEvents ()
   from /usr/lib64/libQtCore.so.4
#30 0x00007fa8f452090d in QEventLoop::exec () from /usr/lib64/libQtCore.so.4
#31 0x00007fa8f2ab2bc5 in QDialog::exec () from /usr/lib64/libQtGui.so.4
#32 0x00007fa8f6471c12 in kdemain () from /usr/lib64/libkdeinit4_kcmshell4.so
#33 0x00007fa8f0237436 in __libc_start_main () from /lib64/libc.so.6
#34 0x0000000000400859 in _start ()
#0  0x00007fa8f02bb261 in nanosleep () from /lib64/libc.so.6
Comment 1 FiNeX 2008-12-27 13:51:00 UTC
Hi! Can you explain how to reproduce the crash? 

Moreover you should install the debug enabled packages and provide a new backtrace. Read this page for the instructions:

http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports

Thanks!
Comment 2 michele romano 2009-01-26 13:01:05 UTC
Very simple!
Just try to configure Samba from System Settings panel exactly I've tried to change the "server string" and then apply.


(In reply to comment #1)
> Hi! Can you explain how to reproduce the crash? 
> 
> Moreover you should install the debug enabled packages and provide a new
> backtrace. Read this page for the instructions:
> 
> http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
> 
> Thanks!
> 

Comment 3 Pino Toscano 2009-03-15 12:44:59 UTC
@michele romano:
your bug is not related to the originally reported problem. Please open a new bug for it.

The original problem is reassigned to the proper component.
Comment 4 Christoph Feck 2009-03-26 04:06:54 UTC
SVN commit 944767 by cfeck:

Do not access empty file list

BUG: 178853
BUG: 181090


 M  +4 -2      kdm-theme.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=944767
Comment 5 Christoph Feck 2009-03-26 04:08:53 UTC
SVN commit 944768 by cfeck:

Do not access empty file list (backport r944767)

CCBUG: 178853
CCBUG: 181090


 M  +4 -2      kdm-theme.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=944768