Do not access empty file list

BUG: 178853
BUG: 181090

svn path=/trunk/KDE/kdebase/workspace/; revision=944767