kcontrol/kdm/kdm-theme.cpp
@@ -330,8 +330,10 @@ void KDMThemeWidget::getNewStuff()
 		KNS::Entry::List entries = engine.downloadDialogModal( this );
 		for (int i = 0; i < entries.size(); i ++) {
 			if (entries.at( i )->status() == KNS::Entry::Installed) {
-				QString name = entries.at( i )->installedFiles().at( 0 ).section( '/', -2, -2 );
-				insertTheme( themeDir + name );
+				if (!entries.at( i )->installedFiles().isEmpty()) {
+					QString name = entries.at( i )->installedFiles().at( 0 ).section( '/', -2, -2 );
+					insertTheme( themeDir + name );
+				}
 			} else if (entries.at( i )->status() == KNS::Entry::Deleted) {
 				if (!entries.at( i )->uninstalledFiles().isEmpty()) {
 					QString name = entries.at( i )->uninstalledFiles().at( 0 ).section( '/', -2, -2 );
